[tool.poetry]
name = "debiaisor"
version = "0.1.0"
description = ""
authors = ["Emilien ARNAUD <arnaud.emilien@chu-amiens.fr>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.1"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
miceforest = "^5.3.0"
xgboost = "^1.5.2"
ipython = "^8.1.1"
fire = "^0.4.0"
tensorflow = "^2.8.0"
pydot = "^1.4.2"
graphviz = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
